--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,7 @@
-
-
 .header {
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-items: center; 
     align-items: center; 
     grid-area: header;
