--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,17 +1,17 @@
-
 .footer {
     grid-area: footer;
     display: grid;
-    grid-template-columns: 1fr; 
-    grid-template-rows: auto auto; 
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
     background-color: var(--background-footer-header);
     padding: 40px 20px;
     width: 100%;
+    gap: 20px;
 }
 
 .footer .nav {
-    padding: 40px;
-    margin-bottom: 5px;
+    padding: 20px;
+    margin-bottom: 10px;
 }
 
 .footer h3 {
@@ -31,13 +31,11 @@
     font-size: 24px;
     line-height: 28px;
     color: var(--color-grey);
-    margin-bottom: 25px; 
-    transition: color 0.3s; 
+    margin-bottom: 15px;
+    transition: color 0.3s;
     white-space: nowrap;
 }
 
 .footer ul li:hover {
-    color: var(--color-black); 
+    color: var(--color-black);
 }
-
-
