--- a/styles/main-2.css
+++ b/styles/main-2.css
@@ -1,34 +1,43 @@
 .main-2 {
     grid-area: main-2;
     display: grid;
-    grid-template-columns: minmax(200px, 1fr) minmax(200px, 2fr);
-    grid-template-rows: repeat(3, minmax(200px, 400px));
-    column-gap: 45px; 
-    row-gap: 120px; 
+    grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr);
+    grid-template-rows: repeat(3, minmax(200px, 600px));
+    column-gap: 45px;
+    row-gap: 60px;
     padding: 60px;
-    align-items: center; 
-    justify-items: stretch; 
+    align-items: start;
+    justify-items: center;
+}
+
+.main-2 .text-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 20px;
+    align-items: center;
+    justify-items: center;
 }
 
 .main-2 img {
     width: 100%;
+    max-width: 500px;
     height: 100%;
+    max-height: 500px;
     object-fit: cover;
     object-position: center;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
 
-.main-2 p {
+.main-2 .text-container p {
     font-weight: 400;
-    font-size: 36px;
+    font-size: 24px;
     line-height: 41px;
     margin: 0;
-    text-align: justify;
+    text-align: center;
 }
 
-
-.read-more-toggle {
+.main-2 .text-container .read-more-toggle {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,22 +47,24 @@
     background-color: transparent;
     cursor: pointer;
     transition: transform 0.3s ease;
+    margin-top: 10px;
     position: relative; 
     align-self: end; 
     justify-self: center; 
     margin-top: 20px; 
 }
 
-
 .read-more-toggle:hover {
     transform: rotate(90deg) scale(1.2);
 }
+
 .read-more-toggle::after {
-    content: '▼'; 
-    font-size: 36px;
+    content: '▼';
+    font-size: 24px;
     color: var(--color-red);
     transition: transform 0.3s ease;
 }
+
 .read-more-toggle.open::after {
     transform: rotate(180deg);
 }
