--- a/styles/media.css
+++ b/styles/media.css
@@ -1,52 +1,81 @@
 
-@media (max-width: 1024px) {
-    .header img {
-        margin-bottom: 0;
-        width: 70%; 
-    }
-    .header { 
-        padding: 20px;
-    }
-    .search-field input[type="search"] {
-        font-size: 16px; 
-        padding: 10px 15px 10px 35px; 
-    }
-    .footer {
-        padding: 20px 10px;
-        width: 100%;
-    }
+@media (max-width: 1272px) {
     .footer h3 {
-        font-size: 28px; 
-        line-height: 34px;
+        font-size: 28px;
+        line-height: 32px;
     }
     .footer ul li {
-        font-size: 16px;
-        line-height: 15px;
+        font-size: 18px;
+        line-height: 22px;
     }
-}
+} 
 
 @media (max-width: 800px) {
     .main-2 {
         grid-template-columns: 1fr; 
         grid-template-rows: auto; 
         padding: 20px;
+        padding: 20px;
+        column-gap: 20px;
+        row-gap: 40px;
     }
     .main-2 img {
-        max-width: 100%;
+        max-width: 60%;
     }
     .main-2 p {
         margin-top: 20px; 
     }
+
+    .main-2 .container {
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+    .main-2 .container p {
+        font-size: 16px;
+        line-height: 1.4;
+    }
+
+    .read-more-toggle {
+        width: 30px;
+        height: 30px;
+    }
+
+    .read-more-toggle::after {
+        font-size: 20px;
+    }
 }
 
+
+@media (max-width: 480px) {
+    .main-2 {
+        grid-template-columns: 1fr;
+        padding: 15px;
+        row-gap: 30px;
+    }
+
+    .main-2 .container {
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+    .main-2 .container p {
+        font-size: 14px;
+    }
+}  
+
 @media (max-width: 400px) {
+    .grid {
+        grid-template-columns: 1fr; 
+        grid-template-rows: auto; 
+        padding: 20px;
+    }
     .social {
         display: none;
     }
 }
 
-
-/* @media (max-width: 350px) {
+@media (max-width: 350px) {
     .main-1::before {
         display: none; 
     }
@@ -60,4 +89,5 @@
     .articles-grid img:nth-child(3) {
         display: none;
     }
-} */
+}
+
